fixed searchboxes problem not showing up on second click

--- a/wv/themes/roots-wv/assets/less/app.less
+++ b/wv/themes/roots-wv/assets/less/app.less
@@ -254,13 +254,14 @@ nav {
 
 .overlay {
   bottom: 0;
-  height: 30px;
+  height: auto;
   width: 100%;
   margin: auto;
   position: absolute;
   background-color:#000;
-  color:#ccc;
+  color:#fff;
   opacity:0;
+  font-size:10px;
 }
 .controls {
   background-color: #fff;
